# chesscom-username-autocomplete

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/chesscom_username_autocomplete.egg-info/: SOURCES.txt
tests/: test_main.py
